Closed
Bug 173973
Opened 21 years ago
Closed 21 years ago
incorrect typeahead find behaviour if the search starts with two equal characters
Categories
(SeaMonkey :: Find In Page, defect)
SeaMonkey
Find In Page
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: corradobc, Assigned: aaronlev)
References
Details
Attachments
(1 file)
968 bytes,
patch
|
caillon
:
review+
bzbarsky
:
superreview+
roc
:
approval+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.2b) Gecko/20021009 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.2b) Gecko/20021009 try to highlight the text 'aab' in the test area <Test-area> 1. aab 2. abb </Test-area> Reproducible: Always Steps to Reproduce: 1. type / (for full text search) 2. type a 3. type a 4. type b Actual Results: typeahead search for a 'bb' text, Expected Results: typeahead should search for a 'aab' text i hope my english is ok ;)
Assignee | ||
Updated•21 years ago
|
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Priority: -- → P3
Target Milestone: --- → mozilla1.3alpha
reproducable on windows xp, moz 1.2b build 2002101010. this is not just aab->bb but also bbc->cc and ccd->dd ooh, a trend... can somebody confirm this on linux, mac, and/or a mozilla milestone?
Priority: P3 → --
Target Milestone: mozilla1.3alpha → ---
sorry for spamming, but this text may be useful on this page: aabbccddeeffgghhiijjkkllmmnnooppqqrrssttuuvvwwxxyyzzaa 0011223344556677889900 AABBCC !!@@## your english is fine, corrado.
i thought i reported this already, my testpages were the foreign yahoo sites and google. but i couldn't find it :(
Comment 4•21 years ago
|
||
I can confirm this. cvs/trunk/Linux Changing OS to All.
OS: Windows 2000 → All
Assignee | ||
Comment 5•21 years ago
|
||
Seeking r=/sr=
Comment 6•21 years ago
|
||
Comment on attachment 102902 [details] [diff] [review] Makes sure mRepeatingMode != eRepeatingChar when repeated char mode isn't being used r=caillon
Attachment #102902 -
Flags: review+
![]() |
||
Comment 7•21 years ago
|
||
Comment on attachment 102902 [details] [diff] [review] Makes sure mRepeatingMode != eRepeatingChar when repeated char mode isn't being used sr=bzbarsky
Attachment #102902 -
Flags: superreview+
Comment 8•21 years ago
|
||
This bug is very apperant if one tries to search for 'ssl'. :-)
Reporter | ||
Comment 9•21 years ago
|
||
aaron, can the patch be checked in?
Comment on attachment 102902 [details] [diff] [review] Makes sure mRepeatingMode != eRepeatingChar when repeated char mode isn't being used a=roc+moz
Attachment #102902 -
Flags: approval+
Assignee | ||
Comment 11•21 years ago
|
||
checked in
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
![]() |
||
Comment 12•21 years ago
|
||
*** Bug 176873 has been marked as a duplicate of this bug. ***
Comment 13•21 years ago
|
||
*** Bug 180569 has been marked as a duplicate of this bug. ***
Comment 14•21 years ago
|
||
vrfy'd fixed using 2002.11.19 comm trunk builds on linux rh7.2, win2k and mac 10.2.2.
Status: RESOLVED → VERIFIED
Hardware: PC → All
Summary: typeahead wrong behavoiur if the search starts with two equals characters → incorrect typeahead find behaviour if the search starts with two equal characters
Updated•15 years ago
|
Product: Core → SeaMonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•