Bug 173973.  typeahead wrong behavoiur if the search starts with two equals characters. r=caillon, sr=bzbarsky, a=roc+moz